--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,13 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.amazonaws:aws-lambda-java-core:1.1.0'
     implementation 'com.amazonaws:aws-java-sdk-lambda:1.11.327'
+    implementation 'com.amazonaws:aws-java-sdk-ecs:1.12.17'
+    implementation 'com.amazonaws:aws-java-sdk-ecr:1.11.66'
     implementation 'org.apache.commons:commons-lang3:3.4'
     implementation 'commons-io:commons-io:2.4'
-    implementation 'com.github.docker-java:docker-java:3.0.14'
+    implementation 'com.github.docker-java:docker-java:3.2.12'
+    implementation 'com.github.docker-java:docker-java-core:3.2.12'
+    implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.2.12'
 //    implementation 'org.slf4j:slf4j-simple:1.6.1'
 //    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.8'
     implementation 'com.google.api-client:google-api-client:1.31.2'
@@ -51,5 +55,6 @@ publishing {
 shadowJar {
     archiveBaseName.set('FTjFaaS')
     archiveClassifier.set('')
+    zip64 true
     archiveVersion.set('')
 }
